# Clas12Tool

./: .gitignore  CMakeLists.txt  Makefile
Banks/: CMakeLists.txt  clas12event.cpp  clas12event.h  detector.cpp  detector.h
Examples/: CMakeLists.txt  analysis.cc  clas12event_example.cc
Hipo/: CMakeLists.txt  dictionary.cpp  event.cpp  reader.cpp  record.cpp
hipopy/: CMakeLists.txt  hipopy.pyx  test_event.py
